--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -59,7 +59,7 @@
   file: path={{ nginx_conf_dir }}/sites-enabled/default state=absent
 
 - name: Create nginx conf file
-  template: src={{ nginx_conf_template }} dest={{ nginx_conf_dir }}/nginx.conf owner={{ nginx_global_owner }} group={{ nginx_global_group }} mode=0644
+  template: src=conf.d/nginx.conf.j2 dest={{ nginx_conf_dir }}/nginx.conf owner={{ nginx_global_owner }} group={{ nginx_global_group }} mode=0644
   notify: 
     - Validate nginx config
     - Restart nginx
