--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -36,6 +36,8 @@ nginx_fastcgi_cache_levels:            '1'
 nginx_fastcgi_cache_max_size:          '500m'
 nginx_fastcgi_cache_path:              false
 nginx_fastcgi_cache_use_stale:         false
+nginx_fastcgi_params_file:             "{{ nginx_conf_dir }}/fastcgi_params"
+nginx_uwsgi_params_file:               "{{ nginx_conf_dir }}/uwsgi_params"
 nginx_gzip:                            'on'
 nginx_gzip_buffers: 
 nginx_gzip_comp_level:                 1
@@ -247,16 +249,6 @@ nginx_upstream:
 
 
 ### START Location ###
-
-nginx_fastcgi_pass:
-nginx_fastcgi_param:
-nginx_fastcgi_params_file:        "{{ nginx_conf_dir }}/fastcgi_params"
-nginx_fastcgi_script:
-nginx_fastcgi_split_path:
-nginx_uwsgi:
-nginx_uwsgi_params:          "{{ nginx_conf_dir }}/uwsgi_params"
-
-
 config_nginx_location:  false
 nginx_location:
   - location:              /hello/world   
@@ -314,6 +306,11 @@ nginx_location:
 
 
 ### START vHost ###
+nginx_ssl_ciphers:                   'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA'
+nginx_ssl_cache:                     'shared:SSL:10m'
+nginx_ssl_session_timeout:           '5m'
+nginx_ssl_protocols:                 'TLSv1 TLSv1.1 TLSv1.2'
+nginx_index_files:                   [ 'index.html', 'index.htm', 'index.php'] # use an empty list to disable
 nginx_vhost:
   - vhost:                         myvhost.internal
     enable:                        true
@@ -326,15 +323,15 @@ nginx_vhost:
     ipv6_listen_ip:                '::'
     ipv6_listen_port:              '80'
     ipv6_listen_options:           'default ipv6only=on'
-    add_header:                    
+    add_header:                    {}
     ssl:                           false
+    ssl_port:                      443
     ssl_listen_option:             true
+    ssl_protocols:                 'TLSv1 TLSv1.1 TLSv1.2'
+    ssl_key:                       
     ssl_cert:                      
     ssl_client_cert:               
     ssl_dhparam:                   
-    ssl_key:                       
-    ssl_port:                      '443'
-    ssl_protocols:                 'TLSv1 TLSv1.1 TLSv1.2'
     ssl_buffer_size:               
     ssl_ciphers:                   'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA'
     ssl_cache:                     'shared:SSL:10m'
@@ -363,7 +360,7 @@ nginx_vhost:
     fastcgi_script:                
     uwsgi_pass:                    
     uwsgi_params_file:             "{{ nginx_conf_dir }}/uwsgi_params"
-    index_files:                   [ 'index.html', 'index.htm', 'index.php']
+    index_files:                   [ 'index.html', 'index.htm', 'index.php'] # use an empty list to disable
     autoindex:                     
     server_name:                   [myvhost.internal]
     www_root:                      
@@ -386,8 +383,8 @@ nginx_vhost:
     location_raw_append:           
     vhost_cfg_prepend:             
     vhost_cfg_append:              
-    vhost_cfg_ssl_prepend:         
-    vhost_cfg_ssl_append:          
+    vhost_cfg_ssl_prepend:         {}
+    vhost_cfg_ssl_append:          {}
     include_files:                 
     access_log:                    
     error_log:                     
