[OI] Fix "when" conditional statements in vhost and location tasks file

--- a/tasks/resource/vhost.yml
+++ b/tasks/resource/vhost.yml
@@ -7,6 +7,9 @@
       _vhost_enable_dir: "{{ nginx_conf_dir }}/sites-enabled"
       _vhost_fragments_dir: "{{ nginx_conf_fragments_dir }}/conf.sites.d"
 
+- name: Clean up nginx vhost config fragments directory
+  file: path={{ _vhost_fragments_dir }} state=absent
+
 - name: Validate IPv6 kernel support exists if ipv6_enabled is true
   fail: msg="[nginx] IPv6 support is not enabled or configured properly"
   when: item.ipv6_enable|default(false) and not ansible_default_ipv6.address 
@@ -35,12 +38,12 @@
 
 - name: Create nginx non-ssl vhost header config fragment 
   template: src=../../templates/vhost/vhost_header.j2 dest={{ _vhost_fragments_dir }}/{{ item.vhost }}/001-nonssl-header.vhost owner=root group=root mode=0644
-  when: item.listen_port != item.ssl_port
+  when: not item.ssl|default(false) and item.listen_port != item.ssl_port|default(false)
   with_items: nginx_vhost
 
 - name: Create nginx non-ssl vhost footer config fragment 
   template: src=../../templates/vhost/vhost_footer.j2 dest={{ _vhost_fragments_dir }}/{{ item.vhost }}/699-nonssl-footer.vhost owner=root group=root mode=0644
-  when: item.listen_port != item.ssl_port
+  when: not item.ssl|default(false) and item.listen_port != item.ssl_port|default(false)
   with_items: nginx_vhost
 
 - debug: msg="CHECKPOINT"
