--- a/tasks/resource/location.yml
+++ b/tasks/resource/location.yml
@@ -2,7 +2,6 @@
 # Remember to cleanup nginx_conf_fragments_dir as pre-task before configs
 
 - set_fact: 
-      _loc_fragments_dir: "{{ nginx_conf_fragments_dir }}/conf.location.d"
       _vhost_fragments_dir: "{{ nginx_conf_fragments_dir }}/conf.sites.d"
 
 - name: Validate vhost variable for location config is defined
@@ -28,13 +27,6 @@
   when: item.vhost|search(' |/')
   with_items: nginx_location
 
-#- name: Create nginx location config fragments dir
-#  file: path={{ _loc_fragments_dir }} state=directory
-#
-#- name: Create nginx location config fragments sub directories
-#  file: path={{ _loc_fragments_dir }}/{{ item.vhost }} state=directory
-#  with_items: nginx_location
-
 # Consider moving fastcgi and uwsgi_params files tasks to config.yml
 - name: Create nginx fastcgi params conf file
   template: src=../../templates/vhost/fastcgi_params.j2 dest={{ nginx_fastcgi_params_file }} owner=root group=root mode=0644
@@ -48,9 +40,10 @@
 
 - name: Create nginx location config for non-ssl vhost
   template: src=../../templates/vhost/location.j2 dest={{ _vhost_fragments_dir }}/{{ item.vhost }}/400-nonssl-{{ item.location|regex_replace(' |/', '_') }}.location owner=root group=root mode=0644
+  when: not item.ssl|default(false) and item.listen_port != item.ssl_port|default(false)
   with_items: nginx_location
 
 - name: Create nginx location config for ssl vhost
   template: src=../../templates/vhost/location.j2 dest={{ _vhost_fragments_dir }}/{{ item.vhost }}/800-ssl-{{ item.location|regex_replace(' |/', '_') }}.location owner=root group=root mode=0644
-  when: item.ssl
+  when: item.ssl|default(false)
   with_items: nginx_location
