[OI] Minor tidy up of tasks files

--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -1,7 +1,5 @@
 ---
-
 ### CONFIGURATION ###
-#- include: validate_config_params.yml
 
 - name: Create nginx conf directory
   file: path={{ nginx_conf_dir }} owner={{ nginx_global_owner }} group={{ nginx_global_group }} mode=0755 state=directory
@@ -87,3 +85,7 @@
 
 - include: resource/upstream.yml
   when: config_nginx_upstream
+
+- include: resource/mailhost.yml
+  when: config_nginx_mailhost
+
