--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,7 +8,7 @@ nginx_pid_file:               /var/run/nginx.pid
 nginx_conf_fragments_dir:     /tmp/nginx-config-assemble.d
 
 nginx_client_body_temp_path:  "{{ nginx_run_dir }}/client_body_temp"
-nginx_daemon_user:            nginx
+nginx_daemon_user:            'www-data'
 nginx_global_owner:           'root'
 nginx_global_group:           "{{ nginx_root_group }}"
 nginx_global_mode:            '0644'
