--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,22 +5,23 @@ galaxy_info:
   license: BSD
   min_ansible_version: 1.9
   platforms:
-   - name: EL
-     versions:
-      - 5
-      - 6
-   - name: Fedora
-     versions:
-      - 16
-      - 17
-      - 18
-   - name: Ubuntu
-     versions:
-      - precise
-      - quantal
-      - raring
-      - saucy
+    - name: EL
+      versions:
+        - 5
+        - 6
+    - name: Fedora
+      versions:
+        - 16
+        - 17
+        - 18
+    - name: Ubuntu
+      versions:
+        - precise
+        - quantal
+        - raring
+        - saucy
+        - trusty
   categories:
-   - web
+    - web
 dependencies: []
   
