--- a/tasks/resource/upstream.yml
+++ b/tasks/resource/upstream.yml
@@ -2,5 +2,5 @@
 
 - name: Create nginx upstream config
   template: src=../../templates/conf.d/upstream.j2 dest={{ nginx_conf_dir }}/conf.d/{{ item.name }}-upstream.conf owner=root group=root mode=0644
-  with_items: nginx_upstream
+  with_items: "{{ nginx_upstream }}"
   notify: Restart nginx
