--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -1,10 +1,8 @@
 ---
 - hosts: test-kitchen
 
-  vars:
-    registrator_service_registry_backend: consul
-    registrator_service_registry_host: "{{ ansible_default_ipv4.address }}"
-    registrator_service_registry_port: 8500
-    
+  vars_files:
+    - vars.yml
+
   roles:
     - ansible-nginx
