--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@ galaxy_info:
   author: "Ogonna Iwunze"
   company: EqualExperts
   license: BSD
-  min_ansible_version: 1.9
+  min_ansible_version: 2.0
   platforms:
     - name: EL
       versions:
@@ -23,5 +23,6 @@ galaxy_info:
         - trusty
   categories:
     - web
+    - nginx
 dependencies: []
   
