--- a/test/integration/default/vars.yml
+++ b/test/integration/default/vars.yml
@@ -172,8 +172,8 @@ nginx_vhost:
     listen_options:                default_server
     ssl:                           true
     ssl_port:                      443
-    ssl_key:                       /etc/ssl/private/ssl-cert-wildcard-example-co-uk.key
-    ssl_cert:                      /etc/ssl/certs/ssl-cert-wildcard-example-co-uk.pem
+    ssl_key:                       /etc/ssl/private/server.key
+    ssl_cert:                      /etc/ssl/certs/server.crt
     ssl_protocols:                 'TLSv1 TLSv1.1 TLSv1.2'
     proxy_pass:                    'https://play-WAF-lbs'
     proxy_read_timeout:            60
@@ -189,8 +189,8 @@ nginx_vhost:
     ssl:                           true
     ssl_port:                      443
     ssl_protocols:                 'TLSv1 TLSv1.1 TLSv1.2'
-    ssl_key:                       /etc/ssl/private/ssl-cert-wildcard-example-co-uk.key
-    ssl_cert:                      /etc/ssl/certs/ssl-cert-wildcard-example-co-uk.pem
+    ssl_key:                       /etc/ssl/private/server.key
+    ssl_cert:                      /etc/ssl/certs/server.crt
     proxy_pass:                    'https://play-WAF-admin-lbs'
     proxy_read_timeout:            60
     proxy_redirect:                'off'
@@ -204,8 +204,8 @@ nginx_vhost:
     ssl:                           true
     ssl_port:                      443
     ssl_protocols:                 'TLSv1 TLSv1.1 TLSv1.2'
-    ssl_key:                       /etc/ssl/private/ssl-cert-wildcard-example-co-uk.key
-    ssl_cert:                      /etc/ssl/certs/ssl-cert-wildcard-example-co-uk.pem
+    ssl_key:                       /etc/ssl/private/server.key
+    ssl_cert:                      /etc/ssl/certs/server.crt
     proxy_pass:                    'https://play-WAF-operations-lbs'
     proxy_read_timeout:            60
     proxy_redirect:                'off'
@@ -220,8 +220,8 @@ nginx_vhost:
     ssl:                           true
     ssl_port:                      443
     ssl_protocols:                 'TLSv1 TLSv1.1 TLSv1.2'
-    ssl_key:                       /etc/ssl/private/ssl-cert-wildcard-example-co-uk.key
-    ssl_cert:                      /etc/ssl/certs/ssl-cert-wildcard-example-co-uk.pem
+    ssl_key:                       /etc/ssl/private/server.key
+    ssl_cert:                      /etc/ssl/certs/server.crt
     proxy_pass:                    'https://play-WAF-lbs'
     proxy_read_timeout:            60
     proxy_redirect:                'off'
@@ -235,9 +235,9 @@ nginx_vhost:
     ssl:                           true
     ssl_port:                      8443
     ssl_protocols:                 'TLSv1 TLSv1.1 TLSv1.2'
-    ssl_key:                       /etc/ssl/private/ssl-cert-wildcard-example-co-uk.key
-    ssl_cert:                      /etc/ssl/certs/ssl-cert-wildcard-example-co-uk.pem
-    ssl_client_cert:               /etc/ssl/certs/ssl-cert-checkout-client-root-ca.pem
+    ssl_key:                       /etc/ssl/private/server.key
+    ssl_cert:                      /etc/ssl/certs/server.crt
+    ssl_client_cert:               /etc/ssl/certs/ca.crt
     ssl_verify_client:             'optional'
     proxy_pass:                    'https://play-WAF-checkout-lbs'
     proxy_read_timeout:            60
@@ -257,7 +257,7 @@ nginx_mailhost:
     listen_ip:           '*'
     ssl:                 true
     ssl_key:             /etc/ssl/private/ssl-cert-wildcard-example-co-uk.key
-    ssl_cert:            /etc/ssl/certs/ssl-cert-wildcard-example-co-uk.pem
+    ssl_cert:            /etc/ssl/certs/ssl-cert-wildcard-example-co-uk.crt
     ssl_port:            443
     starttls:            'off'
     protocol:            'smtp'
