--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,9 +7,13 @@ provisioner:
   hosts: test-kitchen
   ansible_verbose: false
   ansible_verbosity: 2
+  ansible_extra_flags: <%= ENV['ANSIBLE_EXTRA_FLAGS'] %>
 
 platforms:
   - name: ubuntu-14.04
 
 suites:
   - name: default
+    driver:
+      network:
+        - ["private_network", { ip: "172.29.129.30" }]
