[OI] fix failing tasks for nginx installation on centos

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,8 +2,8 @@
 
 - name: Validate nginx config
   shell: /etc/init.d/nginx configtest
-  when: nginx_configtest_enable
-  
+  when: nginx_configtest_enable and ansible_os_family|lower == 'debian'
+
 - name: Restart nginx
   service: name={{ nginx_service_name }} state=restarted
 
