--- a/meta/main.yml
+++ b/meta/main.yml
@@ -21,8 +21,9 @@ galaxy_info:
         - raring
         - saucy
         - trusty
+        - xenial
   categories:
     - web
     - nginx
 dependencies: []
-  
+
