--- a/test/integration/default/default.yml
+++ b/test/integration/default/default.yml
@@ -5,18 +5,24 @@
     - roles/ansible-nginx/test/integration/default/vars.yml
 
   pre_tasks:
+    - name: Create nginx ssl dir for private keys
+      file:
+        path:  /etc/ssl/private
+        mode:  0700
+        state: directory
+
     - name: Copy nginx ssl private key
-      copy: 
+      copy:
         src: roles/ansible-nginx/test/ssl/server.key
         dest: /etc/ssl/private/server.key
 
     - name: Copy nginx wildcard ssl cert
-      copy: 
+      copy:
         src: roles/ansible-nginx/test/ssl/server.crt
         dest: /etc/ssl/certs/server.crt
 
     - name: Copy nginx ssl private key
-      copy: 
+      copy:
         src: roles/ansible-nginx/test/ssl/ca.crt
         dest: /etc/ssl/certs/ca.crt
 
