--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,8 +23,12 @@ nginx_super_user:             true
 nginx_confd_purge:            false
 nginx_vhost_purge:            false
 nginx_manage_repo:            true
-nginx_repo: 
-nginx_mainline_repo: 
+nginx_version:                '*'
+nginx_repo:
+nginx_mainline_repo:
+nginx_yum_repo_os_distro: "rhel"
+nginx_yum_repo_baseurl: "http://nginx.org/packages/{{ nginx_yum_repo_os_distro }}/{{ ansible_distribution_major_version }}/$basearch/"
+nginx_mainline_yum_repo_baseurl: "http://nginx.org/packages/mainline/{{ nginx_yum_repo_os_distro }}/{{ ansible_distribution_major_version }}/$basearch/"
 
 
 ### START Nginx Configuration ###
@@ -41,7 +45,7 @@ nginx_fastcgi_cache_use_stale:        false
 nginx_fastcgi_params_file:            "{{ nginx_conf_dir }}/fastcgi_params"
 nginx_uwsgi_params_file:              "{{ nginx_conf_dir }}/uwsgi_params"
 nginx_gzip:                           'on'
-nginx_gzip_buffers: 
+nginx_gzip_buffers:
 nginx_gzip_comp_level:                1
 nginx_gzip_disable:                   'msie6'
 nginx_gzip_min_length:                20
@@ -130,7 +134,7 @@ nginx_geo:                          # List of geo mapping entries to create
 ##     default:          extra
 ##     proxy_recursive:  false
 ##     proxies:          [ '192.168.99.99' ]
-##     networks: 
+##     networks:
 ##       '10.0.0.0/8':      'intra'
 ##       '172.16.0.0/12':   'intra'
 ##       '192.168.0.0/16':  'intra'
@@ -147,7 +151,7 @@ nginx_map:                            # List of mapping entries to create
     hostnames:    false               # Indicates that source values can be hostnames with a prefix or suffix mask.
 
 ## Example: nginx_map
-## config_nginx_map:     true 
+## config_nginx_map:     true
 ## nginx_map:
 ##   - name:      client_network
 ##     hostnames: true
@@ -183,7 +187,7 @@ nginx_mailhost:
 
 ### START Upstream ###
 config_nginx_upstream:  false
-nginx_upstream: 
+nginx_upstream:
   - name: proxypass                    # Name of upstream to create
     members: []                        # List of member URIs for NGINX to connect to.
     upstream_cfg_prepend: {}           # Expects a hash with custom directives to put before anything else inside upstream
@@ -191,13 +195,13 @@ nginx_upstream:
 
 ## Example: nginx_upstream
 ## config_nginx_upstream:  true
-## nginx_upstream: 
+## nginx_upstream:
 ##   - name: proxypass
-##     members: 
+##     members:
 ##       - 'localhost:3000'
 ##       - 'localhost:3001'
 ##       - 'localhost:3002'
-##     upstream_cfg_prepend: 
+##     upstream_cfg_prepend:
 ##       ip_hash:    ''
 ##       keepalive:  20
 ##     upstream_fail_timeout: '10s'
@@ -207,7 +211,7 @@ nginx_upstream:
 ### START Location ###
 config_nginx_location:    false
 nginx_location:                                                               # A list of location entries. Creates location entries within a vHost
-  - location:              /hello/world                                       # Specifies the URI associated with this location 
+  - location:              /hello/world                                       # Specifies the URI associated with this location
     vhost:                  myvhost.internal                                  # vHost for this location entry to include with
     internal:              false                                              # Indicates whether or not this location can be used for internal requests only.
     www_root:              /var/www                                           # Specified the location on disk for files to be read from. Cannot be set in conjuction with proxy_pass
@@ -221,7 +225,7 @@ nginx_location:                                                               # 
     fastcgi_pass:          'localhost:9000'                                   # Location of fastcgi (host:port)
     fastcgi_param:                                                            # Set additional custom fastcgi_params
       REQUEST_METHOD:   '$request_method'
-      CONTENT_TYPE:     '$content_type'                             
+      CONTENT_TYPE:     '$content_type'
       CONTENT_LENGTH:   '$content_length'
     fastcgi_params_file:   "{{ nginx_conf_dir }}/fastcgi_params"              # Optional alternative fastcgi_params file to use
     fastcgi_script:                                                           # optional SCRIPT_FILE parameter
@@ -252,7 +256,7 @@ nginx_location:                                                               # 
     auth_basic:                                                               # HTTP Basic authentication
     auth_basic_user_file:                                                     # Sets the htpasswd filename for the authentication realm
     rewrite_rules:         []                                                 # List of rewrite_rules.
-    mp4:                   false                                              # Indicates whether or not this location can be used for mp4 streaming. 
+    mp4:                   false                                              # Indicates whether or not this location can be used for mp4 streaming.
     flv:                   false                                              # Indicates whether or not this location can be used for flv streaming.
 ### END Location ###
 
@@ -260,11 +264,11 @@ nginx_location:                                                               # 
 ### START vHost ###
 config_nginx_vhost:               true
 nginx_vhost:                                                                  # List of vHosts to create.
-  - vhost:                        myvhost.internal                            # Name of vHost to create 
+  - vhost:                        myvhost.internal                            # Name of vHost to create
     enable:                       true                                        # Whether to enable vHost or not. "true" creates a link in sites-enabled dir
     listen_ip:                    '*'                                         # Default IP address for NGINX to listen with this vHost on.
     listen_port:                  '80'                                        # Default IP Port for NGINX to listen with this vHost on. Defaults to TCP 80
-    listen_options:                                                           # Extra options for listen directive like 'default' to catchall. 
+    listen_options:                                                           # Extra options for listen directive like 'default' to catchall.
     location_allow:               []                                          # List of locations to allow connections from.
     location_deny:                []                                          # List of locations to deny connections from.
     ipv6_enable:                  false                                       # Enable or disable IPv6 support
@@ -274,17 +278,17 @@ nginx_vhost:                                                                  # 
     add_header:                   {}                                          # A hash of headers. Add headers to the HTTP  response when response code is 200, 204, 301, 302 or 304.
     ssl:                          false                                       # Indicates whether to setup SSL bindings for this vhost.
     ssl_port:                     443                                         # Default IP Port for NGINX to listen with this SSL vhost on. Defaults to TCP 443
-    ssl_listen_option:            true                                        # 
+    ssl_listen_option:            true                                        #
     ssl_protocols:                'TLSv1 TLSv1.1 TLSv1.2'                     # SSL protocols enabled. Defaults to 'TLSv1 TLSv1.1 TLSv1.2'
-    ssl_key:                                                                  # Pre-generated SSL Key file to reference for SSL support.  
+    ssl_key:                                                                  # Pre-generated SSL Key file to reference for SSL support.
     ssl_cert:                                                                 # Pre-generated SSL Certificate file to referece for SSL support.
-    ssl_client_cert:                                                          # Pre-generated SSL Certificate file to reference for client verify SSL support 
+    ssl_client_cert:                                                          # Pre-generated SSL Certificate file to reference for client verify SSL support
     ssl_verify_client:                                                        # Enables verification of client certificates. (on | off | optional | optional_no_ca)
-    ssl_dhparam:                                                              # Specifies a file containing Diffie-Hellman key agreement protocol cryptographic paramenters, in PEM format, utilized for exchanging session keys between server and client. 
+    ssl_dhparam:                                                              # Specifies a file containing Diffie-Hellman key agreement protocol cryptographic paramenters, in PEM format, utilized for exchanging session keys between server and client.
     ssl_buffer_size:                                                          # Sets the size of the buffer used for sending data.
     ssl_ciphers:                  "{{ nginx_ssl_ciphers }}"                   # SSL ciphers enabled. Defaults to value of nginx_ssl_cipher above.
-    ssl_cache:                    'shared:SSL:10m'                            # 
-    ssl_crl:                                                                  # Specifies CRL path in file system 
+    ssl_cache:                    'shared:SSL:10m'                            #
+    ssl_crl:                                                                  # Specifies CRL path in file system
     ssl_stapling:                 false                                       # Enables or disables stapling of OCSP responses by the server.
     ssl_stapling_file:                                                        # When set, the stapled OCSP response will be taken from the specified file instead of querying the OCSP responder specified in the server certificate.
     ssl_stapling_responder:                                                   # Overrides the URL of the OCSP responder specified in the Authority Information Access certificate extension.
@@ -304,18 +308,18 @@ nginx_vhost:                                                                  # 
     proxy_method:                                                             # If defined, overrides the HTTP method of the request to be passed to the backend.
     proxy_set_body:                                                           # If defined, sets the body passed to the backend.
     resolver:                     []                                          # List of name servers used to resolve names of upstream servers into address.
-    fastcgi_pass:                                                             # Location of fastcgi (host:port) 
+    fastcgi_pass:                                                             # Location of fastcgi (host:port)
     fastcgi_params_file:          "{{ nginx_conf_dir }}/fastcgi_params"       # optional alternative fastcgi_params file to use
-    fastcgi_script:                                                           # optional SCRIPT_FILE parameter 
-    uwsgi_pass:                                                               # 
+    fastcgi_script:                                                           # optional SCRIPT_FILE parameter
+    uwsgi_pass:                                                               #
     uwsgi_params_file:            "{{ nginx_conf_dir }}/uwsgi_params"         #
     index_files:                  [ 'index.html', 'index.htm', 'index.php']   # Default index files for NGINX to read when traversing a directory. Use an empty list to disable
     autoindex:                                                                # Set it on 'on' or 'off 'to activate/deactivate
-    server_name:                  [myvhost.internal]                          # 
-    www_root:                                                                 #  
-    rewrite_www_to_non_www:       false                                       # Adds a server directive and rewrite rule to rewrite www.domain.com to domain.com in order to avoid duplicate content (SEO) 
-    rewrite_to_https:                                                         # Adds a server directiv and rewrite rule to rewrite to ssl 
-    location_custom_cfg:                                                      # 
+    server_name:                  [myvhost.internal]                          #
+    www_root:                                                                 #
+    rewrite_www_to_non_www:       false                                       # Adds a server directive and rewrite rule to rewrite www.domain.com to domain.com in order to avoid duplicate content (SEO)
+    rewrite_to_https:                                                         # Adds a server directiv and rewrite rule to rewrite to ssl
+    location_custom_cfg:                                                      #
     location_cfg_prepend:                                                     #
     location_cfg_append:                                                      #
     location_custom_cfg_prepend:                                              #
@@ -344,7 +348,7 @@ nginx_vhost:                                                                  # 
     log_by_lua:                                                               # Run the Lua source code inlined as the <lua-script-str> at the log request processing phase.
     log_by_lua_file:                                                          # Equivalent to log_by_lua, except that the file specified by <path-to-lua-script-file> contains the Lua code, or, as from the v0.5.0rc32 release, the Lua/LuaJIT bytecode to be executed.
     use_default_location:         true                                        # Create a default (.i.e "/") location block. NOTE: Set to "false" if you need to explicitly define an nginx_location hash for "/" location.
-    rewrite_rules:                []                                          # 
+    rewrite_rules:                []                                          #
     string_mappings:              {}                                          #
     geo_mappings:                 {}                                          #
     gzip_types:                                                               # Defines gzip_types, nginx default is text/html
